--- a/OSLC4Net_SDK/OSLC4Net.ChangeManagementTest/OSLC4Net.ChangeManagementTest.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.ChangeManagementTest/OSLC4Net.ChangeManagementTest.csproj
@@ -52,6 +52,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TestChangeManagementTurtle.cs" />
     <Compile Include="TestChangeManagementJson.cs" />
     <Compile Include="TestChangeManagementXml.cs" />
     <Compile Include="TestChangeManagementRdfXml.cs" />
