--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@
 version: 2
 updates:
   - package-ecosystem: "nuget" # See documentation for possible values
-    directory: "/" # Location of package manifests
+    directory: "/OSLC4Net_SDK" # Location of package manifests
     open-pull-requests-limit: 12
     schedule:
       interval: "monthly"
