--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,14 @@ on:
   pull_request:
     branches: [ master ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: ${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' }}
+
 jobs:
   build:
     runs-on: windows-latest
+    timeout-minutes: 30
 
     steps:
     - uses: actions/checkout@v3
@@ -23,8 +28,11 @@ jobs:
 
     - uses: actions/cache@v3
       with:
-        path: ~/.nuget/packages
-        key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+        path: |
+            ~/.nuget/packages
+            **/bin/Debug
+            **/obj/Debug
+        key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json', '**/*.sln', '**/*.csproj') }}
         restore-keys: |
           ${{ runner.os }}-nuget-
 
@@ -32,4 +40,13 @@ jobs:
       run: nuget restore OSLC4Net_SDK/OSLC4Net.Core.sln
 
     - name: Build OSLC4Net
-      run: msbuild OSLC4Net_SDK/OSLC4Net.Core.sln /p:Configuration=Release
+      #run: msbuild OSLC4Net_SDK/OSLC4Net.Core.sln /p:Configuration=Release
+      run: msbuild OSLC4Net_SDK/OSLC4Net.Core.sln
+
+    - name: Run VStest
+      uses: microsoft/vstest-action@v1.0.0
+      with:
+        testAssembly: '**\bin\\Debug\*Test*.dll'
+        searchFolder: '.\OSLC4Net_SDK\'
+        runInParallel: true
+        #failOnMinTestsNotRun: true
