--- a/OSLC4Net_SDK/OSLC4Net.Client/OSLC4Net.Client.csproj
+++ b/OSLC4Net_SDK/OSLC4Net.Client/OSLC4Net.Client.csproj
@@ -1,48 +1,25 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{EED02B8F-2C90-4484-B4B6-BB510750B84C}</ProjectGuid>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OSLC4Net.Client</RootNamespace>
-    <AssemblyName>OSLC4Net.Client</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <Version>0.3.0-alpha</Version>
     <VersionSuffix>alpha</VersionSuffix>
     <PackageLicenseExpression>EPL-1.0</PackageLicenseExpression>
     <Authors>Andrii Berezovskyi and OSLC4Net contributors</Authors>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <!-- TODO: remove PackageOutputPath after migration to .NET Core-->
     <PackageOutputPath>MSBuild_Nuget_Pack/</PackageOutputPath>
     <PackageProjectUrl>https://github.com/OSLC/oslc4net/</PackageProjectUrl>
     <RepositoryUrl>https://github.com/OSLC/oslc4net/</RepositoryUrl>
-    <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <TargetFrameworkProfile />
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <AssemblyTitle>OSLC4Net.Client</AssemblyTitle>
+    <Product>OSLC4Net.Client</Product>
+    <Copyright>Copyright OSLC4Net contributors 2023, IBM 2012</Copyright>
+    <AssemblyVersion>0.3.0.0</AssemblyVersion>
+    <FileVersion>0.3.0.0</FileVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <DocumentationFile>bin\Debug\OSLC4Net.Client.XML</DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="dotNetRdf.Core">
@@ -50,89 +27,27 @@
     </PackageReference>
     <PackageReference Include="NuGet.Build.Tasks.Pack" Version="5.2.0" />
     <None Include="../../README.md" Pack="true" PackagePath="" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Net" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Net.Http.WebRequest" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Exceptions\JazzAuthFailedException.cs" />
-    <Compile Include="Exceptions\MessageExtractor.cs" />
-    <Compile Include="Exceptions\OslcClientApplicationException.cs" />
-    <Compile Include="Exceptions\ResourceNotFoundException.cs" />
-    <Compile Include="Exceptions\RootServicesException.cs" />
-    <Compile Include="Oslc\OslcClient.cs" />
-    <Compile Include="Oslc\OSLCConstants.cs" />
-    <Compile Include="Oslc\Resources\ArchitectureConstants.cs" />
-    <Compile Include="Oslc\Resources\ArchitectureLinkType.cs" />
-    <Compile Include="Oslc\Resources\ArchitectureResource.cs" />
-    <Compile Include="Oslc\Resources\AutomationConstants.cs" />
-    <Compile Include="Oslc\Resources\AutomationPlan.cs" />
-    <Compile Include="Oslc\Resources\AutomationRequest.cs" />
-    <Compile Include="Oslc\Resources\AutomationResult.cs" />
-    <Compile Include="Oslc\Resources\ChangeRequest.cs" />
-    <Compile Include="Oslc\Resources\CmConstants.cs" />
-    <Compile Include="Oslc\Resources\OslcQuery.cs" />
-    <Compile Include="Oslc\Resources\OslcQueryParameters.cs" />
-    <Compile Include="Oslc\Resources\OslcQueryResult.cs" />
-    <Compile Include="Oslc\Resources\ParameterInstance.cs" />
-    <Compile Include="Oslc\Resources\QmConstants.cs" />
-    <Compile Include="Oslc\Resources\QmResource.cs" />
-    <Compile Include="Oslc\Resources\Requirement.cs" />
-    <Compile Include="Oslc\Resources\RequirementCollection.cs" />
-    <Compile Include="Oslc\Resources\RmConstants.cs" />
-    <Compile Include="Oslc\Resources\RmUtil.cs" />
-    <Compile Include="Oslc\Resources\TestCase.cs" />
-    <Compile Include="Oslc\Resources\TestExecutionRecord.cs" />
-    <Compile Include="Oslc\Resources\TestPlan.cs" />
-    <Compile Include="Oslc\Resources\TestResult.cs" />
-    <Compile Include="Oslc\Resources\TestScript.cs" />
-    <Compile Include="Exceptions\JazzAuthErrorException.cs" />
-    <Compile Include="ServiceProviderRegistryClient.cs" />
-    <Compile Include="ServiceProviderRegistryURIs.cs" />
-    <Compile Include="OslcRestClient.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
+    <Compile Update="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
+    <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\JsonProvider\OSLC4Net.Core.JsonProvider.csproj">
-      <Project>{469BA948-728B-4B8C-80E9-7EC06CED8196}</Project>
-      <Name>OSLC4Net.Core.JsonProvider</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OSLC4Net.Core.Query\OSLC4Net.Core.Query.csproj">
-      <Project>{B7EC82FE-64D2-4271-8D04-3044046360FA}</Project>
-      <Name>OSLC4Net.Core.Query</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OSLC4Net.Core\OSLC4Net.Core.csproj">
-      <Project>{C07B57BD-3356-4AD8-8050-D708B023A8EC}</Project>
-      <Name>OSLC4Net.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\OSLC4Net.DotNetRdfProvider\OSLC4Net.Core.DotNetRdfProvider.csproj">
-      <Project>{DFE6E48C-D5B1-4FC6-8D94-C72286080F78}</Project>
-      <Name>OSLC4Net.Core.DotNetRdfProvider</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
+    <ProjectReference Include="..\JsonProvider\OSLC4Net.Core.JsonProvider.csproj" />
+    <ProjectReference Include="..\OSLC4Net.Core.Query\OSLC4Net.Core.Query.csproj" />
+    <ProjectReference Include="..\OSLC4Net.Core\OSLC4Net.Core.csproj" />
+    <ProjectReference Include="..\OSLC4Net.DotNetRdfProvider\OSLC4Net.Core.DotNetRdfProvider.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="log4net">
@@ -141,16 +56,7 @@
     <PackageReference Include="Microsoft.AspNet.WebApi.Client">
       <Version>5.2.9</Version>
     </PackageReference>
-    <PackageReference Include="Newtonsoft.Json">
-      <Version>13.0.3</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
